--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:required="false"/>
 
     <application
-        android:name=".ExpenseTrackerApplication"
+        android:name=".expenselist.ExpenseTrackerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
